This file lists major changes between StatAlign releases.

------------------------------------------------------------------------------

StatAlign v3.3 on 24 Oct 2018

  New features:
    * MPI-based parallel version now available
    * Improvements to MCMC output files, to facilitate downstream analysis
    * Default is now to use branch-specific structural diffusivity parameters and B-factor-weighted baseline variance in command-line mode as well as with the GUI

  Bug fixes:
    * Removed static variable tempDoubleArray to avoid potential race condition
    * Bugfix to length=1 case in linearizerWeight
    * Errors in Utils.java now reported to STDERR rather than generating a popup window
    * Output PDB files now contain HIS instead of HSD
    * ModelExtension plugins now only contribute to the emission probability after the initial alignment has been generated

------------------------------------------------------------------------------

StatAlign v3.2 on 10 Feb 2015

  New features:
    * Build process automated using Gradle
    * Consensus tree output includes percentage support for all internal nodes
    * Core model parameters printed to a separate log file
    * Minimum-risk summary alignment and column scores outputted to separate files

  Updates to StructAlign plugin (v1.1):
    * Analysis now possible for cases where not all sequences have known structure
    * Fix to spike mixture prior (relevant only to runs carried out using the
      'sigmaSpike' option)
    * Fixed behaviour when stopping and restarting in GUI mode

  Bugfixes:
    * Fixed errors occuring in certain cases after removing sequences in GUI 
    * Check for version update now works correctly
    * Plugin panels now no longer show in GUI when deactivated
    * Fixed issue where postprocessing files could be empty in RNA mode
    * Topology moves deactivated when only two sequences present

------------------------------------------------------------------------------
